# plaquette-graph

./: .buildinfo  CMakeLists.txt  Makefile  README.rst  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree  installation.doctree
.doctrees/api/: classPlaquette_1_1DecodingGraph.doctree  classPlaquette_1_1SparseGraph.doctree  classPlaquette_1_1SparseGraphRow.doctree  dir_plaquette_graph.doctree  dir_plaquette_graph_src.doctree  file_plaquette_graph_src_DecodingGraph.hpp.doctree  file_plaquette_graph_src_SparseGraph.hpp.doctree  library_root.doctree  namespace_Plaquette.doctree  unabridged_orphan.doctree  (+2 more)
_images/: inheritance-6fbf8ae9ad620b165386ffe17af7318461d175a7.png.map
_modules/: index.html
_sources/: index.rst.txt  installation.rst.txt
_static/: documentation_options.js
api/: classPlaquette_1_1DecodingGraph.html  classPlaquette_1_1SparseGraph.html  classPlaquette_1_1SparseGraphRow.html  dir_plaquette_graph.html  dir_plaquette_graph_src.html  file_plaquette_graph_src_DecodingGraph.hpp.html  file_plaquette_graph_src_SparseGraph.hpp.html  library_root.html  namespace_Plaquette.html  program_listing_file_plaquette_graph_src_DecodingGraph.hpp.html  program_listing_file_plaquette_graph_src_SparseGraph.hpp.html  unabridged_orphan.html
code/: __init__.html
doc/: Makefile  conf.py  requirements.txt
plaquette_graph/: __init__.py  _version.py
tests/: test_decoding_graph.py  test_multigraph.py  test_sparse_graph.py
(+39 files in other folders)
